--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk { //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi", "x86", "x86_64"
+        }
     }
     buildTypes {
         release {
@@ -26,6 +29,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -51,4 +55,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.0'
     implementation 'com.android.support:design:28.0.0'
+    //视频
+    implementation 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.2'
+    //轮播图
+    implementation 'cn.bingoogolapple:bga-banner:2.2.5@aar'
+    implementation 'com.facebook.fresco:fresco:0.12.0'
 }
