--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,21 +22,38 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Login.LoginActivity"></activity>
-
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="L8lnbIBXp0aCOR4KnjPaMM8YPTZejqNE" />
-
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.Shopping.GuideActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".Activity.Entertainment.MovieActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Activity.Shopping.ShoppingActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.Message.MessageActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Activity.Login.LoginActivity"
+            android:screenOrientation="landscape" />
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="L8lnbIBXp0aCOR4KnjPaMM8YPTZejqNE" />
+
+        <activity
+            android:name=".Activity.MainActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
