登陆页面修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        debug {
-            keyAlias 'key0'
-            keyPassword '000000'
-            storeFile file('D:/CarTest/导航.jks')
-            storePassword '000000'
-        }
-    }
+//    signingConfigs {
+//        debug {
+//            keyAlias 'key0'
+//            keyPassword '000000'
+//            storeFile file('D:/CarTest/导航.jks')
+//            storePassword '000000'
+//        }
+//    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "zjc.strongmanpushcar"
@@ -102,4 +102,8 @@ dependencies {
     implementation(name: 'NaviTts', ext: 'aar')
     implementation files('libs/AMap3DMap_6.8.0_AMapNavi_6.7.0_20190401.jar')
     implementation files('libs/Msc.jar')
+
+    //身份证识别
+    implementation 'com.github.wenchaosong:OCR_identify:3.0.8'
+    implementation files('libs/ocr-sdk.jar')
 }
