主界面修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,5 @@ dependencies {
     implementation(name: 'NaviTts', ext: 'aar')
     implementation files('libs/AMap3DMap_6.8.0_AMapNavi_6.7.0_20190401.jar')
     implementation files('libs/Msc.jar')
+    implementation project(':floatmenulib')
 }
