--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
     implementation 'com.github.wenchaosong:OCR_identify:3.0.8'
     implementation files('libs/ocr-sdk.jar')
     implementation project(':floatmenulib')
+    //蓝牙
+    implementation 'com.inuker.bluetooth:library:1.4.0'
 }
