--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,7 @@ dependencies {
     implementation project(':floatmenulib')
     //蓝牙
     implementation 'com.inuker.bluetooth:library:1.4.0'
+    //二维码
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+
 }
